Fix(general): remove usages of Utils.paste
Relying on a external service to post stuff is annoying.
We should try to paginate on custom list, and try to send
people to custom view if the command response is too long,
since that can see longer responses.